# face_neural_network

./: .gitignore  env.sample  pyproject.toml  setup.py
datasets/: face_datasets.py
facer/: trainer.py
facer/datasets/: data_module.py  face_datasets.py  processor.py  transforms.py  utils.py
facer/models/: backbone.py  blocks.py  decoder.py  encoder.py  face_model.py  hybrid.py  landmarks.py  perceptron.py  regressor.py  segmentation.py  unet.py
facer/trainers/: callbacks.py  label_adapters.py  landmark_trainer.py  losses.py  trainers.py  utils.py  visualisation_callbacks.py
facer/utils/: faces.py  visualisation.py
jobs/: adapt_hybrid_model_landmarks.py  adapt_hybrid_model_masks.py  dvc.yaml  fine_tune_hybrid_model.py  ibug_processor.py  make_transform_jsons.py  params.yaml  prepare_dataset.py  process_dataset.py  test_hybrid_model.py  train_hybrid_model.py  train_landmarks.py
jobs/transforms/: .gitignore  photometric.json
models/: backbone.py  face_model.py  regressor.py
