[tool.poetry]
name = "face-neural-network"
version = "0.1.0"
description = "Module for training face segmentation u-net models"
authors = ["Stanislaw Borkowski <stani.bork@gmail.com>"]
readme = "README.md"
packages = [{include = "facer"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
torchvision = "^0.14.0"
fire = "^0.4.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0.66"
pytorch-lightning = "^1.8.3.post1"
albumentations = "^1.3.0"
dvc = "^2.37.0"
wandb = "^0.13.6"
torchsummary = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
