[tool.poetry]
name = "face-neural-network"
version = "0.1.0"
description = "Module for training face segmentation u-net models"
authors = ["Stanislaw Borkowski <stani.bork@gmail.com>"]
readme = "README.md"
packages = [{include = "facer"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
fire = "^0.5.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
pytorch-lightning = "^2.0.2"
albumentations = "^1.3.0"
dvc = "^2.56.0"
wandb = "^0.15.2"
torchsummary = "^1.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
